# Compesca-A1

./: .gitignore  CMakeLists.txt  Makefile  README.md  a  dashboardCalc.cpp  dashboardCalc.h  exemplo_como_usar_trigger.cpp  exemplo_como_usar_trigger.h  link_cosumer_producers_test.cpp  main.cpp  mock.db  pyproject.toml  requirements.txt  test_dataframe.cpp  test_pipeline.cpp  test_reader.cpp  teste_join  teste_join.cpp
Relatório/source/: main.tex
data/: consumer.csv  order.csv  product.csv  stock.csv
logs/: audit_logs_1.txt  audit_logs_10.txt  audit_logs_2.txt  audit_logs_3.txt  audit_logs_4.txt  audit_logs_5.txt  audit_logs_6.txt  audit_logs_7.txt  audit_logs_8.txt  audit_logs_9.txt  debug_logs_1.txt  debug_logs_10.txt  debug_logs_2.txt  debug_logs_3.txt  debug_logs_4.txt  debug_logs_5.txt  debug_logs_6.txt  debug_logs_7.txt  debug_logs_8.txt  debug_logs_9.txt  failure_logs_1.txt  failure_logs_10.txt  failure_logs_2.txt  failure_logs_3.txt  failure_logs_4.txt  failure_logs_5.txt  failure_logs_6.txt  failure_logs_7.txt  failure_logs_8.txt  failure_logs_9.txt  user_behavior_logs_1.txt  user_behavior_logs_10.txt  user_behavior_logs_2.txt  user_behavior_logs_3.txt  user_behavior_logs_4.txt  user_behavior_logs_5.txt  user_behavior_logs_6.txt  user_behavior_logs_7.txt  user_behavior_logs_8.txt  user_behavior_logs_9.txt
request/: user_behavior_rqt_1.txt  user_behavior_rqt_10.txt  user_behavior_rqt_100.txt  user_behavior_rqt_101.txt  user_behavior_rqt_11.txt  user_behavior_rqt_12.txt  user_behavior_rqt_13.txt  user_behavior_rqt_14.txt  user_behavior_rqt_15.txt  user_behavior_rqt_16.txt  user_behavior_rqt_17.txt  user_behavior_rqt_18.txt  user_behavior_rqt_19.txt  user_behavior_rqt_2.txt  user_behavior_rqt_20.txt  user_behavior_rqt_21.txt  user_behavior_rqt_22.txt  user_behavior_rqt_23.txt  user_behavior_rqt_24.txt  user_behavior_rqt_25.txt  user_behavior_rqt_26.txt  user_behavior_rqt_27.txt  user_behavior_rqt_28.txt  user_behavior_rqt_29.txt  user_behavior_rqt_3.txt  user_behavior_rqt_30.txt  user_behavior_rqt_31.txt  user_behavior_rqt_32.txt  user_behavior_rqt_33.txt  user_behavior_rqt_34.txt  user_behavior_rqt_35.txt  user_behavior_rqt_36.txt  user_behavior_rqt_37.txt  user_behavior_rqt_38.txt  user_behavior_rqt_39.txt  user_behavior_rqt_4.txt  user_behavior_rqt_40.txt  user_behavior_rqt_41.txt  user_behavior_rqt_42.txt  user_behavior_rqt_43.txt  (+61 more)
rpc/: CMakeLists.txt  MockServer.cpp  MockServer.h  contract.proto  mock.py  mock_client.py  mock_server.cpp
src/: ConsumerProducerQueue.h  DataFrame.cpp  DataFrame.h  DataFrameQueue.cpp  DataFrameQueue.h  DataFrameVersionManager.cpp  DataFrameVersionManager.h  Handlers.cpp  Handlers.h  Reader.cpp  Reader.h  Semaphore.cpp  Semaphore.h  mock.cpp  mock.h  triggers.cpp  triggers.h  writer.cpp  writer.h
src/testDataFrame/: DataFrame  DataFrame.cpp  data.csv
testData/: data.txt  data2.csv  data2.txt
